Updated the GitHub Repo

--- a/Linear_Regression_for_Business_Expansion_Predictions.ipynb
+++ b/Linear_Regression_for_Business_Expansion_Predictions.ipynb
@@ -37,7 +37,7 @@
         "**Description:** This project uses PyTorch to build and evaluate a linear regression model for predicting store profits based on city population. It addresses business questions on prediction, generalization, and reliability, using datasets from a startup scenario.  \n",
         "\n",
         "**Tech Stack:** Python, PyTorch, NumPy, Matplotlib  \n",
-        "**GitHub Repo:** [Link to your repo once uploaded]"
+        "**GitHub Repo:** https://github.com/Anguschow237/ML-business-profit-prediction.git"
       ],
       "metadata": {
         "id": "JM5RIDSYsHM6"
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "5qpT7mzOtGNC"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "id": "BYoLzYFWwpz7",
         "outputId": "552135fa-a95c-4cb6-ea35-42ff478bd8ae"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "B_7UX90Nwopo"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
         "id": "Thmr6sUxxNDj",
         "outputId": "75ab3829-d675-4ed2-9913-7b4e182df450"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
         "id": "kgLjmZ4Pxvfg",
         "outputId": "68025b12-e8f4-4c8f-9739-fbc48ddf8292"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
         "id": "YDNsZqcSx7wv",
         "outputId": "edfc4725-6d02-4401-833d-6bf039ed5cdd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -441,7 +441,7 @@
       "metadata": {
         "id": "3XFL3neQfThO"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
         "id": "t0pfb18bfeFS",
         "outputId": "e1fb65e3-63ae-4ff5-a0ec-43ecea4dd43a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +567,7 @@
         "id": "esb3wt2FfqyD",
         "outputId": "30c947ed-48f8-4a0d-ef0e-0a47a35f997e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -693,7 +693,7 @@
         "id": "XOnJ5WKh5M_1",
         "outputId": "00942718-4c9d-40fc-e1fd-52adcbcb8618"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,7 +742,7 @@
       "metadata": {
         "id": "AawUdF5v5S_g"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -805,7 +805,7 @@
         "id": "9OyasHd95We4",
         "outputId": "a0660c62-cffd-4c6c-9fb3-cf44c0a9b0f6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -934,7 +934,7 @@
         },
         "outputId": "0f7d2b37-764e-4b5a-e5d5-838709c56ea3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
